--- a/package.json
+++ b/package.json
@@ -18,35 +18,35 @@
     "@shopify/react-native-skia": "0.1.240",
     "expo": "^53.0.0",
     "expo-blur": "~14.1.3",
-    "expo-camera": "~13.6.0",
-    "expo-constants": "~15.4.5",
-    "expo-font": "~11.10.2",
-    "expo-haptics": "~12.8.1",
-    "expo-linear-gradient": "~12.7.1",
-    "expo-linking": "~6.2.2",
-    "expo-router": "^2.0.0",
-    "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~1.11.1",
+    "expo-camera": "~16.1.5",
+    "expo-constants": "~17.1.3",
+    "expo-font": "~13.2.2",
+    "expo-haptics": "~14.1.3",
+    "expo-linear-gradient": "~14.1.3",
+    "expo-linking": "~7.1.3",
+    "expo-router": "~5.0.2",
+    "expo-splash-screen": "~0.30.6",
+    "expo-status-bar": "~2.2.2",
     "expo-symbols": "~0.4.3",
-    "expo-system-ui": "~2.9.3",
-    "expo-web-browser": "~12.8.2",
+    "expo-system-ui": "~5.0.5",
+    "expo-web-browser": "~14.1.5",
     "lucide-react-native": "^0.475.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.73.2",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.1",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "14.1.0",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.3.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.6",
-    "react-native-webview": "13.6.4"
+    "react-native-web": "^0.20.0",
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.14",
-    "typescript": "^5.1.3"
+    "@babel/core": "^7.25.2",
+    "@types/react": "~19.0.10",
+    "typescript": "~5.8.3"
   }
 }
